--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,16 +4,6 @@
   align-items: center;
   justify-content: center;
 }
-.fundo{
-  display: block;
-  overflow-y: hidden;
-  overflow-x: hidden;
-  width: 100%;
-  height: 100vh;
-  background: rgb(136,69,153);
-  text-align: center;
-  justify-content: center;
-}
 .espaco-0-5{
   height: 4px;
   }
@@ -62,6 +52,16 @@ a{
 }
 /*MOBILE*/
 @media(max-width: 599px){
+  .fundo{
+    display: block;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    background: rgb(136,69,153);
+    text-align: center;
+    justify-content: center;
+  }
   .titulo{
     color: rgb(255,255,255);
     font-family: 'Luckiest Guy', cursive; 
@@ -135,6 +135,16 @@ a{
 
 /*TABLET */ 
 @media(min-width: 600px) and (max-width: 1000px){
+  .fundo{
+    display: block;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    background: rgb(136,69,153);
+    text-align: center;
+    justify-content: center;
+  }
 
   .titulo{
     color: rgb(255,255,255);
@@ -201,6 +211,26 @@ a{
 /*versão DESKTOP*/
 
 @media (min-width: 1001px){
+  .fundo{
+    display: block;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 80%;
+    height: 100vh;
+    background: rgb(136,69,153);
+    text-align: center;
+    justify-content: center;
+  }
+  .fundo1{
+    display: block;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100vh;
+    background: rgb(136,69,153);
+    text-align: center;
+    justify-content: center;
+  }
   .titulo{
     color: rgb(255,255,255);
     font-family: 'Luckiest Guy', cursive; 
