Corrigindo problemas de bootstrap e css (Desktop)
1) botões cortados (página de vitória);
2) container de cartas cortado (jogo em monitor 1024 x 768);
3) sinal de match estava enorme, foi diminuído o tamanho;
4) menu-desktop lateral estava cortado: corrigido;
5) fundo;

--- a/assets/css/creditos.css
+++ b/assets/css/creditos.css
@@ -13,7 +13,7 @@
         display:block;
         overflow-y: hidden;
         overflow-x: hidden;
-        width: 100%;
+        width: 75vw;
         height: 100vh;
         background: rgb(136,69,153);
         }
