--- a/assets/css/sobre-o-jogo.css
+++ b/assets/css/sobre-o-jogo.css
@@ -17,7 +17,14 @@
 }
 
   
-  
+.fundo{
+  display:block;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  width: 75vw;
+  height: 100vh;
+  background: rgb(136,69,153);
+}
  
 /*TABLET*/
 /*DESKTOP*/
