--- a/assets/css/menu-desktop.css
+++ b/assets/css/menu-desktop.css
@@ -3,10 +3,10 @@
   
   .tipoUL{ /*menu lateral**/
       list-style-type: none;
-      left: 80%;
+      left: 75%;
       margin: 0;
       padding: 0;
-      width: 20%;
+      width: 25vw;
       background-color: #541663;
       height: 100%; 
       position: absolute; 
