--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -121,7 +121,6 @@
         width: 72vw; 
         height: 58vh;
         top: 0px;
-        left: -2vw;
         position: relative;
         margin: 0 auto;
         border-radius: 10px;
@@ -154,7 +153,7 @@
         width: 350px; 
         height: 650px;
         top: 50px;
-        left: 2.5vw;
+        left: 3.7vw;
         position: relative;
         margin: 0 auto;
         border-radius: 10px;
@@ -172,8 +171,7 @@
     }   
     #points-box{
         position:absolute;
-        bottom: 3.5rem;
-        left: 150px;
+        bottom: 15vh;
     }
     .b1{
         background: url("../img/mobile/fase1/verso1.png");
