--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -61,14 +61,15 @@ a{
   .fundo{
     display: flex;
     overflow: hidden;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
     height: 100vh;
     background: rgb(136,69,153);
     text-align: center;
-    justify-content:baseline;
     align-items: center;
+    justify-content: center;
+    position: relative;
   }
   .titulo{
     color: rgb(255,255,255);
@@ -140,6 +141,9 @@ a{
     text-align: center;
     color: #FFFFFF;
   }
+  .menu-mobile{
+    display: flex;
+  }
 }
 
 /*TABLET */ 
@@ -150,7 +154,7 @@ a{
     height: 0;
   }
   .fundo{
-    display: flex;
+    /*display: flex;
     flex-direction: column;
     flex-wrap:nowrap;
     flex-grow: 2;
@@ -159,8 +163,20 @@ a{
     height: 100vh;
     background: rgb(136,69,153);
     text-align: center;
-    justify-content: baseline;
+    justify-content: flex-start;
+    align-items: center;*/
+
+    display: flex;
+    overflow: hidden;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    width: 100%;
+    height: 100vh;
+    background: rgb(136,69,153);
+    text-align: center;
     align-items: center;
+    justify-content: flex-start;
+    position: relative;
   }
 
   .titulo{
@@ -224,6 +240,9 @@ a{
     text-align: center;
     color: #FFFFFF;
 }
+.menu-mobile{
+  display: flex;
+}
 }
 /*versão DESKTOP*/
 
@@ -234,8 +253,7 @@ a{
     height: 0;
   }
   .fundo{
-    display: flex;
-    align-content: center;
+    display:flex;
     overflow: hidden;
     width: 80%;
     height: 100vh;
@@ -243,7 +261,6 @@ a{
     text-align: center;
     justify-content:flex-start;
     align-items: center;
-    flex-wrap: wrap;
   }
   .fundo1{
     margin-top: 5.0vh;
@@ -257,6 +274,7 @@ a{
     justify-content:center;
     align-items: center;
     flex-wrap: wrap;
+    position: relative;
   }
   .titulo{
     color: rgb(255,255,255);
