--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -1,4 +1,3 @@
-
 /*animações*/
 @keyframes fadeIn {
     0% { opacity: 1; }
@@ -37,7 +36,6 @@
     
 }
 .card:hover{
-    /*efeito lindo, amei*/
     box-shadow: 0 0 30px #aaa;
 }
 .face .flipped .match{
@@ -90,9 +88,7 @@
         height: 120px;
         position: absolute; 
         border-radius: 10px;
-        /*aqui os cards ficam empilhados, mas preciso distanciar um por um? NAO JAVASCRIPT LINDO*/
-        perspective: 600px;
-        /*profundidade do giro, para nao ficar chapado*/ 
+        perspective: 600px; /*profundidade do giro, para nao ficar chapado*/ 
         background:  rgb(136,69,153) ;
         border: 0ch;
     }
@@ -113,7 +109,7 @@
         padding-left: 4%;
         padding-top: 1%;
         height: 32px;
-       }
+    }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
@@ -130,7 +126,6 @@
         height: 120px;
         position: absolute; 
         border-radius: 10px;
-        /*aqui os cards ficam empilhados, mas são separados com javascript*/
         perspective: 600px;
         background: rgb(136,69,153);
         border: 0ch;
@@ -184,5 +179,5 @@
     }   
     .espaco-0-5{
         height: 10px;
-        }  
+    }  
 }
