--- a/assets/css/quit-modal.css
+++ b/assets/css/quit-modal.css
@@ -31,8 +31,9 @@
   color: #541663;
 }
 .fonte-modal-sair{
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Arial', sans-serif;
   font-size: 20px;
+  font-weight: 600;
   text-align: center;
   letter-spacing: 0.005em;
   color: rgba(0, 0, 0, 0.83);
@@ -40,4 +41,7 @@
 
 .cursor-pointer{
   cursor: pointer;
+  font-family: 'Arial', sans-serif;
+  font-size: 20px;
+  font-weight: 550;
 }
