melhorias código jogo.js
de 702 linhas para 542

--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -41,7 +41,7 @@
 .face .flipped .match{
     box-shadow: 0 0 10px #0f0;
 }
-#imgMatchSing{
+#imgMatchSign{
     position: relative;
     top: 40%;
     left: 40%;
