--- a/assets/css/creditos.css
+++ b/assets/css/creditos.css
@@ -1,84 +1,94 @@
 /*GLOBAL*/
 
 /*DESKTOP*/
-@media(min-width: 1001px){
-    #titulo-creditos-centro{
+@media(min-width: 1001px) {
+    #titulo-creditos-centro {
         width: 80vw;
-        left:0;
+        left: 0;
     }
-    .creditos{ 
+
+    .creditos {
         line-height: 16px;
     }
-    .fundo-creditos{
-        display:block;
+
+    .fundo-creditos {
+        display: block;
         overflow-y: hidden;
         overflow-x: hidden;
         width: 75vw;
         height: 100vh;
-        background: rgb(136,69,153);
-        }
-        .titulo{
-            text-align: center;
-            justify-content: center;
-        }
-        .subtitulo-cred{
-            width: 80vw;
-            position: absolute;
-            left: 34vw;
-        }
-   
-}
-/*TABLET*/
-@media(min-width: 600px) and (max-width: 1000px){
-    #creditos-mobile{
-        top: 3rem;
-        height: 94vh; 
-        overflow-y: scroll;    
+        background: rgb(136, 69, 153);
     }
 
-    .creditos{ 
+    .titulo {
+        text-align: center;
+        justify-content: center;
+    }
+
+    .subtitulo-cred {
+        width: 80vw;
+        position: absolute;
+        left: 34vw;
+    }
+
+}
+
+/*TABLET*/
+@media(min-width: 600px) and (max-width: 1000px) {
+    #creditos-mobile {
+        top: 3rem;
+        height: 94vh;
+        overflow-y: scroll;
+    }
+
+    .creditos {
         line-height: 16px;
     }
 
-    .fundo-creditos{
+    .fundo-creditos {
         overflow-y: scroll;
         overflow-x: hidden;
         width: 100vw;
         height: 100vh;
-        background: rgb(136,69,153);
+        background: rgb(136, 69, 153);
         text-align: center;
         justify-content: center;
-      }
-      .menu-mobile-fixed{
+    }
+
+    .menu-mobile-fixed {
         position: fixed;
         width: 100%;
     }
 
 }
-/*MOBILE*/
-@media(max-width: 599px){ 
 
-    #creditos-mobile{
+/*MOBILE*/
+@media(max-width: 599px) {
+
+    #creditos-mobile {
         top: 3rem;
-        height: 94vh; 
-        overflow-y: scroll;    
+        height: 94vh;
+        overflow-y: scroll;
     }
-    .creditos{ 
+
+    .creditos {
         line-height: 16px;
         overflow-y: scroll;
     }
-    .fundo-creditos{
+
+    .fundo-creditos {
         overflow-y: scroll;
         overflow-x: hidden;
         width: 100%;
         height: 100vh;
-        background: rgb(136,69,153);
+        background: rgb(136, 69, 153);
         text-align: center;
         justify-content: center;
-      }
-      .menu-mobile-fixed{
-          position: fixed;
-          width: 100%;
-      }
-      
+    }
+
+    .menu-mobile-fixed {
+        position: fixed;
+        width: 100%;
+    }
+
 }
