--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,175 +1,198 @@
 /*GLOBAL*/
-.toast{
+.toast {
   background-color: #541663;
-  z-index:10;
+  z-index: 10;
 }
-.btn-cookies{
-    background: #a961bd;
-    left:8vw;
+
+.btn-cookies {
+  background: #a961bd;
+  left: 8vw;
 }
-.cookies-consent{
+
+.cookies-consent {
   position: absolute;
   bottom: 0%;
   background-color: #541663;
-  z-index:10;
+  z-index: 10;
 }
 
 /*DESKTOP*/
-@media(min-width: 1001px){
-  .logo-eic-index{
+@media(min-width: 1001px) {
+  .logo-eic-index {
     width: 15vw;
     position: relative;
     margin-top: 1.5vh;
     vertical-align: left;
-    }
-  .cards-inicial{
+  }
+
+  .cards-inicial {
     width: 25vw;
-  } 
-  .toast{
+  }
+
+  .toast {
     width: 100vw;
     height: 8rem;
   }
-  .inputs-container{
-    height: 6.5vh;
-    width: 18vw;
+
+  .inputs-container {
+    height: 8vh;
+    width: 22vw;
     padding: 1vw;
     border-radius: 10px;
-    border: 0px solid #884599 ;
+    border: 0px solid #884599;
     background: #F0C0F4;
     font-style: normal;
     font-weight: normal;
     font-size: 2vh;
     line-height: 0px;
-    -webkit-text-fill-color:#985193;
+    -webkit-text-fill-color: #985193;
     letter-spacing: -0.015em;
     text-shadow: #884599;
     margin-bottom: 1vh;
-  }  
-    
-    
-    .subtitulo-3{
-        padding-top: 8%;
-        padding-bottom: 4%;
-        text-align: center;
-        color: rgb(255,255,255);
-        font-size: 2.0rem;
-        line-height: 2.8rem;
-        font-family: Luckiest Guy, cursive; 
-        -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
-        -webkit-text-stroke-color: #000000;
-        -webkit-text-stroke-width: 1px;
-        letter-spacing: -0.015em;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        left: 15%;  
-    }
-    .btn-index{
-        margin-bottom: 1vh;
-        height: 7vh;
-        width: 12vw;
-        font-size: 2vh;
-        position: relative;
-    }
-    .label1{
-        font-family: Fira Sans;
-        width: 100%;
-        position: absolute;
-        color: #fff;
-        text-align: left;
-        padding-bottom: 0.2em;
-        font-weight: bold;
-    }
-    .espaco-i-1{
-       height: 3vh;
-      }
-    .espaco-i-2{
-      height:6vh;
-    }
-    .links-uteis{
-      margin-bottom: 1vh;
-      font-size: 2vh;
-    }
+  }
+
+
+  .subtitulo-3 {
+    padding-top: 8%;
+    padding-bottom: 4%;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    font-size: 2.0rem;
+    line-height: 2.8rem;
+    font-family: Luckiest Guy, cursive;
+    -webkit-text-fill-color: rgba(255, 255, 255, 0.9);
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+    letter-spacing: -0.015em;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    left: 15%;
+  }
+
+  .btn-index {
+    margin-bottom: 1vh;
+    height: 8vh;
+    width: 14vw;
+    font-size: 3vh;
+    position: relative;
+  }
+
+  .label1 {
+    font-family: Fira Sans;
+    width: 100%;
+    position: absolute;
+    color: #fff;
+    text-align: left;
+    padding-bottom: 0.2em;
+    font-weight: bold;
+  }
+
+  .espaco-i-1 {
+    height: 3vh;
+  }
+
+  .espaco-i-2 {
+    height: 6vh;
+  }
+
+  .links-uteis {
+    margin-bottom: 1vh;
+    font-size: 2vh;
+  }
 }
+
 /*TABLET*/
-@media(min-width: 600px) and (max-width: 1000px){
-    .cards-inicial{
-        width: 50vw;
-      }
-    .logo-eic-index{
+@media(min-width: 600px) and (max-width: 1000px) {
+  .cards-inicial {
     width: 50vw;
+  }
+
+  .logo-eic-index {
+    width: 45vw;
     position: relative;
     margin-top: 1.5vh;
     vertical-align: center;
-    }
-    .inputs-container{
-      height: 5vh;
-      width: 40vw;
-      padding-left: 1em;
-      border-radius: 10px;
-      border: 0px solid #884599 ;
-      background: #F0C0F4;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 2vh;
-      line-height: 0px;
-      -webkit-text-fill-color:#985193;
-      letter-spacing: -0.015em;
-      text-shadow: #884599;
-      margin-bottom: 1vh;
-      }
-      .btn-index{
-        margin-bottom: 1vh;
-        height: 5.5vh;
-        width: 35vw;
-        font-size: 2vh;
-    }
-    .links-uteis{
-      margin-bottom: 1vh;
-      font-size: 2vh;
-    }
+  }
+
+  .inputs-container {
+    height: 5vh;
+    width: 40vw;
+    padding-left: 1em;
+    border-radius: 10px;
+    border: 0px solid #884599;
+    background: #F0C0F4;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2vh;
+    line-height: 0px;
+    -webkit-text-fill-color: #985193;
+    letter-spacing: -0.015em;
+    text-shadow: #884599;
+    margin-bottom: 1vh;
+  }
+
+  .btn-index {
+    margin-bottom: 1vh;
+    height: 5.5vh;
+    width: 35vw;
+    font-size: 2vh;
+  }
+
+  .links-uteis {
+    margin-bottom: 1vh;
+    font-size: 2vh;
+  }
 }
+
 /*MOBILE*/
-@media(max-width: 599px){ 
-  .cards-inicial{
-      width: 50vw;
-    }
-  .logo-eic-index{
-      width: 50vw;
-      position: relative;
-      margin-top: 1vh;
-      vertical-align: left;
-      }
-      .inputs-container{
-        height: 5vh;
-        width: 66.666vw;
-        border-radius: 10px;
-        border: 0px solid #884599 ;
-        background: #F0C0F4;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 2vh;
-        line-height: 0px;
-        -webkit-text-fill-color:#985193;
-        letter-spacing: -0.015em;
-        text-shadow: #884599;
-        margin-bottom: 1vh;
-        }
-        .btn-index{
-        height: 6vh;
-        width: 45vw;
-        position: relative;
-        margin-bottom: 1vh;
-        }
-        .links-uteis{
-          margin-bottom: 1vh;
-          font-size: 2vh;
-        }
-        .display-center{
-          display: none;
-        }
-        #e-mail{
-          margin-bottom: 1vh;
-        }
-        #password{
-          margin-bottom: 1vh;
-        }
+@media(max-width: 599px) {
+  .cards-inicial {
+    width: 50vw;
+  }
+
+  .logo-eic-index {
+    width: 50vw;
+    position: relative;
+    margin-top: 1vh;
+    vertical-align: left;
+  }
+
+  .inputs-container {
+    height: 5vh;
+    width: 66.666vw;
+    border-radius: 10px;
+    border: 0px solid #884599;
+    background: #F0C0F4;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 2vh;
+    line-height: 0px;
+    -webkit-text-fill-color: #985193;
+    letter-spacing: -0.015em;
+    text-shadow: #884599;
+    margin-bottom: 1vh;
+  }
+
+  .btn-index {
+    height: 6vh;
+    width: 45vw;
+    position: relative;
+    margin-bottom: 1vh;
+  }
+
+  .links-uteis {
+    margin-bottom: 1vh;
+    font-size: 2vh;
+  }
+
+  .display-center {
+    display: none;
+  }
+
+  #e-mail {
+    margin-bottom: 1vh;
+  }
+
+  #password {
+    margin-bottom: 1vh;
+  }
 }
