--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,6 +29,9 @@
 .espaco-4{
   height: 21px;
 }
+.espaco-7{
+  height: 7vh;
+}
 .btn {
   width: 12.375rem;
   height: 3.5rem;
@@ -250,11 +253,12 @@ a{
     height: 100vh;
     background: rgb(136,69,153);
     text-align: center;
-    justify-content:flex-start;
+    justify-content:center;
     align-items: center;
+    flex-direction: column;
   }
-  .fundo1{
-    margin-top: 5.0vh;
+   .fundo1{
+    margin-top: 1.0vh;
     display: flex;
     overflow: hidden;
     flex-direction: column;
