--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -147,9 +147,9 @@ a{
     text-align: center;
     color: #FFFFFF;
   }
-  .menu-mobile{
+  /* .menu-mobile{
     display: flex;
-  }
+  } */
 }
 
 /*TABLET */ 
