--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -107,15 +107,14 @@
   }
 
   .logo-eic-index {
-    width: 45vw;
+    width: 50%;
     position: relative;
-    margin-top: 1.5vh;
     vertical-align: center;
   }
 
   .inputs-container {
-    height: 5vh;
-    width: 40vw;
+    height: 7vh;
+    width: 45%;
     padding-left: 1em;
     border-radius: 10px;
     border: 0px solid #884599;
@@ -132,14 +131,14 @@
 
   .btn-index {
     margin-bottom: 1vh;
-    height: 5.5vh;
-    width: 35vw;
-    font-size: 2vh;
+    height: 7vh;
+    width: 45%;
+    font-size: medium;
   }
 
   .links-uteis {
     margin-bottom: 1vh;
-    font-size: 2vh;
+    font-size: large;
   }
 }
 
@@ -150,21 +149,21 @@
   }
 
   .logo-eic-index {
-    width: 50vw;
+    width: 35vw;
     position: relative;
     margin-top: 1vh;
     vertical-align: left;
   }
 
   .inputs-container {
-    height: 5vh;
-    width: 66.666vw;
+    height: 6vh;
+    width: 80vw;
     border-radius: 10px;
     border: 0px solid #884599;
     background: #F0C0F4;
     font-style: normal;
     font-weight: normal;
-    font-size: 2vh;
+    font-size: medium;
     line-height: 0px;
     -webkit-text-fill-color: #985193;
     letter-spacing: -0.015em;
@@ -173,15 +172,16 @@
   }
 
   .btn-index {
-    height: 6vh;
-    width: 45vw;
+    height: 7vh;
+    width: 40%;
     position: relative;
     margin-bottom: 1vh;
+    font-size: medium;
   }
 
   .links-uteis {
     margin-bottom: 1vh;
-    font-size: 2vh;
+    font-size: medium;
   }
 
   .display-center {
